# portfolio-site

./: Cargo.toml  Dockerfile  deploy.sh  fly.toml
src/: lib.rs  main.rs
src/app/: home.rs  itan.rs  kalama_sin.rs  mod.rs  nasin_nanpa.rs  pakala.rs  picks.rs  portfolio.rs  tp.rs
style/: main.scss
