[package]
name = "personal_site"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.1.0", optional = true }
leptos = { version = "0.7.0-rc1", features = ["nightly"] }
leptos_meta = { version = "0.7.0-rc1" }
leptos_actix = { version = "0.7.0-rc1", optional = true }
leptos_router = { version = "0.7.0-rc1", features = ["nightly"] }
wasm-bindgen = "0.2.93"
leptos-use = { version = "0.13.4" }
web-sys = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "personal_site"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets" # Env: LEPTOS_ASSETS_DIR
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults" # The browserlist query used for optimizing the CSS
watch = false # Set by cargo-leptos watch when building with that tool
env = "DEV"

